--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,3 +18,31 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: diegomattozo/argo-cd-playground
           tags: ${{ github.sha }}, latest
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: kustomize
+        uses: imranismail/setup-kustomize@v2
+        with:
+          kustomize-version: v3.6.1
+
+      - name: update k8s
+        run: |
+          cd k8s
+          kustomize edit set image hello-app=diegomattozo/argo-cd-playground:${{ github.sha }}
+          cat kustomization.yml
+
+      - name: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Deploy Action"
+          git commit -am "change image tag"
+
+      - name: push
+        uses: ad-m/github-push-action@master
