--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,3 +46,5 @@ jobs:
 
       - name: push
         uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
